start the first page logic (js)

--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <body>
+   
         <div class="container">
           <div class="game-box">
             <img src="asset/brian-icon.png" alt="Brain Icon" class="icon" />
@@ -38,13 +38,17 @@
           </div>
 
 
-    </div>
+ 
 
-    
+        <!-- game board -->
+        <div class="game-board hidden"></div>
+  </div>
+
+    <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Samar Balousha</p>
+  </footer>
 </body>
 
-<!-- Footer -->
-  <footer>
-      <p>&copy; 2025 Samar Balousha</p>
-    </footer>
+
 </html>
