add the photos , edit main, game pages , js code works well so far

--- a/game.html
+++ b/game.html
@@ -26,10 +26,11 @@
       
             <label for="username">Enter your name:</label>
             <input type="text" id="username" placeholder="Your name..." />
+            <div id="username-warning" style="color: red; font-size: 13px; min-height: 18px;"></div>
       
             <p class="difficulty-title">Choose difficulty:</p>
             <div class="difficulty-options">
-              <div class="difficulty active" data-level="easy">Easy<br><small>8 cards (4 pairs)</small></div>
+              <div class="difficulty active" data-level="easy" >Easy<br><small>8 cards (4 pairs)</small></div>
               <div class="difficulty" data-level="medium">Medium<br><small>12 cards (6 pairs)</small></div>
               <div class="difficulty" data-level="hard">Hard<br><small>16 cards (8 pairs)</small></div>
             </div>
