--- a/gamePage1.html
+++ b/gamePage1.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Match Game</title>
     <link rel="stylesheet" href="gameStyle.css">
-    <script src="gameScript.js"></script>
+
+    <script src="gameScript.js" type="module" defer></script>
+
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
 
@@ -22,7 +25,8 @@
         </header>
 
         <!-- board -->
-        <div class="game-board" id="game-board"></div>
+        <div class="game-board"id="game-board"></div>
+
 
         <!-- Controls -->
         <div class="controls">
